# salamanca

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  salamanca.db.bak-20260717
backend/alembic/: env.py
backend/alembic/versions/: 20260716_0001_initial_schema.py  20260716_8af0f88ecea1_create_financial_domain.py  20260717_c3f1a2b4d5e6_transaction_payment_fields_inr.py  20260717_d5e2b7c9a1f3_consolidate_legacy_snapshot_rows.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  deps.py  health.py  openapi.py
backend/app/api/middleware/: __init__.py  body_limit.py  metrics.py  rate_limit.py  request_context.py  security_headers.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: __init__.py  ai.py  auth.py  documents.py  financial.py  users.py
backend/app/api/v1/schemas/: __init__.py  ai.py  auth.py  common.py  financial.py  users.py
backend/app/core/: __init__.py  config.py  errors.py  filtering.py  health.py  logging.py  metrics.py  observability.py  pagination.py  rbac.py  security.py  tasks.py
backend/app/domain/: __init__.py
backend/app/domain/ai/: __init__.py  llm.py  service.py
backend/app/domain/auth/: __init__.py  service.py
backend/app/domain/documents/: __init__.py  classifier.py  service.py
backend/app/domain/financial/: __init__.py  service.py
backend/app/domain/users/: __init__.py  service.py
backend/app/infra/: __init__.py
backend/app/infra/db/: __init__.py  base.py  repository.py  session.py
backend/app/infra/db/models/: __init__.py  asset.py  auth_session.py  budget.py  expense.py  financial_document.py  financial_profile.py  income.py  insurance.py  investment.py  liability.py  loan.py  savings_goal.py  transaction.py  user.py
backend/app/infra/db/repositories/: __init__.py  auth_sessions.py  financial.py  users.py
backend/app/infra/redis/: __init__.py  client.py  memory.py
backend/app/infra/seed/: __init__.py  framework.py  seeders.py
backend/app/utils/: __init__.py  datetime.py  uuid7.py
backend/tests/: conftest.py  helpers.py
backend/tests/api/: test_ai.py  test_auth.py  test_document_classifier.py  test_documents.py  test_errors.py  test_financial.py  test_financial_data.py  test_health.py  test_rate_limit.py  test_repository.py  test_seed.py  test_users.py
backend/tests/unit/: test_datetime_utils.py  test_financial.py  test_pagination_filtering.py  test_rbac.py  test_security.py  test_uuid7.py
frontend/: .env.example  Dockerfile  (+4 more)
(+40 files in other folders)
