[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fios-backend"
version = "0.1.0"
description = "FIOS — Financial Intelligence Operating System backend"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "email-validator>=2.2",
    "SQLAlchemy[asyncio]>=2.0.35,<2.1",
    "alembic>=1.13,<2",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "redis>=5.0,<6",
    "argon2-cffi>=23.1",
    "PyJWT[crypto]>=2.9,<3",
    "structlog>=24.4",
    "typer>=0.12",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
    "fakeredis>=2.24",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
]

[project.scripts]
fios = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # FastAPI dependency injection uses callables in defaults
    "SIM108", # ternaries are not always clearer
    "UP046",  # PEP 695 generics not adopted yet (pydantic/mypy compatibility)
    "UP047",  # PEP 695 generics not adopted yet
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_incomplete_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:fakeredis.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
